# hairaproducts

./: .dockerignore  .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  Lista de Produtos.xlsx  Procfile  README.md  alembic.ini  alembic_audit.ini  alembic_central.ini  app.py  data_loader.py  docker-compose.yml  entrypoint.sh  filters.py  haira_central.db  pyproject.toml  railway.json  requirements.txt
.streamlit/: config.toml
config/: allergens.yaml  audience_age.yaml  brand_groups.json  brands.json  brands_triage.json  functions.yaml  hair_types.yaml  ingredient_compatibility.yaml
data/: amend_all_urls.txt  avatim_all_urls.txt  eudora_all_urls.txt  granado_all_urls.txt  inoar_all_urls.txt  johnsons-baby_all_urls.txt  loccitane_all_urls.txt  loop_skip.txt  loreal-professionel_all_urls.txt  mustela_all_urls.txt  o-boticario_all_urls.txt  redken_all_urls.txt  triagem-2026-05-12.json
docs/: architecture.md  audit-runbook.md  cloudcode-jira-standard.md  gold-operator-runbook.md  handoff-andre.md  moon-knowledge-base.md  workflow-gold-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
iamoon/: COMPÊNDIO HAIRA .docx.md  Dica do Dia.docx.md  HAIRA - FAQ.md  Inteligência Haira by Fernanda Torres.docx.md  Perguntas e Respostas - Daniel.md  Personalidade da Moon - Jun_26.md  Rotinas e Produtos para Moon.md  Você Sabia.docx.md
scripts/: amend_export.py  amend_fill_gaps.py  amend_full_extraction.py  amend_inci_refetch.py  amend_reclassify.py  autoresolve_accept_pass2_when_empty.py  autoresolve_dedupe_review.py  backup_db.sh  (+49 more)
(+519 files in other folders)
