[project]
name = "haira"
version = "2.0.0"
description = "Hair Product Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "playwright>=1.40",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "python-slugify>=8.0",
    "psycopg2-binary>=2.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
]

[project.scripts]
haira = "src.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
